Assignment notes and outcome summary now display whitespace correctly.

--- a/app/assets/stylesheets/vertical.scss
+++ b/app/assets/stylesheets/vertical.scss
@@ -251,3 +251,8 @@ ul.authors, ul.instructors {
 #user-search {
   width: 300px;
 }
+
+
+.outcome_summary, .notes {
+  white-space:  pre-wrap;
+}
